--- a/fandom_site/posts/templates/posts/_comment.html
+++ b/fandom_site/posts/templates/posts/_comment.html
@@ -1,6 +1,15 @@
-<div style="margin-left: {{ level|default:0 }}px; margin-bottom: 10px;">
-    <strong>{{ comment.user.username }}</strong>: {{ comment.content }}
-    <div style="font-size: small; color: gray;">{{ comment.created_at }}</div>
+<div class="comment-container {% if level > 0 %}reply{% endif %}">
+    <div class="comment-header">
+        {{ comment.user.username }}
+    </div>
+
+    <div class="comment-content">
+        {{ comment.content }}
+    </div>
+
+    <div class="comment-time">
+        {{ comment.created_at|date:"d.m.Y H:i" }}
+    </div>
 
     {% if request.user == comment.user %}
         <form action="{% url 'delete_comment' comment.id %}" method="post" style="display:inline;">
@@ -13,7 +22,7 @@
 
     <a href="#" class="reply-link" data-comment-id="{{ comment.id }}">↪ Ответить</a>
 
-    <form method="post" action="{% url 'add_comment' post.pk %}" class="reply-form" id="reply-form-{{ comment.id }}" style="display: none; margin-top: 5px;">
+    <form method="post" action="{% url 'post_detail' post.pk %}" class="reply-form" id="reply-form-{{ comment.id }}" style="display: none; margin-top: 5px;">
         {% csrf_token %}
         <textarea name="content" rows="2" style="width: 100%;" placeholder="Ваш ответ..."></textarea>
         <input type="hidden" name="parent_id" value="{{ comment.id }}">
@@ -21,10 +30,12 @@
     </form>
 
     {% if comment.replies.all %}
-        <a href="#" class="toggle-replies" data-target="replies-{{ comment.id }}">Показать {{ comment.replies.count }} ответ(ы)</a>
-        <div id="replies-{{ comment.id }}" class="replies" style="display: none;">
+        <button class="toggle-replies-btn" data-target="replies-{{ comment.id }}">
+            ▶ Показать {{ comment.replies.count }} ответ(ов)
+        </button>
+        <div id="replies-{{ comment.id }}" class="replies" style="display: none; margin-left: 20px; margin-top: 5px;">
             {% for reply in comment.replies.all %}
-                {% include 'posts/_comment.html' with comment=reply post=post level=30 %}
+                {% include 'posts/_comment.html' with comment=reply post=post level=level|add:"1" %}
             {% endfor %}
         </div>
     {% endif %}
