--- a/fandom_site/accounts/templates/accounts/home.html
+++ b/fandom_site/accounts/templates/accounts/home.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% block title %}Главная{% endblock %}
-{% block content %}
-<h2 style="text-align:center;">Пока тут ничего нет</h2>
-<p style="text-align:center;">Скоро здесь появятся фанфики от пользователей!</p>
+{% empty %}
+  <p style="text-align:center;">Скоро здесь появятся фанфики от пользователей!</p>
 {% endblock %}
